--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -13,10 +13,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
 
-  <!-- Google Fonts - Plus Jakarta Sans for README editor -->
+  <!-- Google Fonts - Plus Jakarta Sans for README editor, Source Sans Pro for annotation labels -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&family=Source+Sans+3:wght@400;600;700&display=swap"
     rel="stylesheet">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
